Methods work now

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <div class="content">
             
             <div class="textBox">
+            
+                <p id="mood">Your girlfriends mood will appear here</p>
                 <p id="thoughts">Your girlfriends thoughts will appear here</p>
             </div>
             <div class="buttons">
-            <button type="button" onclick="myFunction(Hello)">Say Hello!</button>
-            <button type="button" onclick="myFunction(Hug)">Hug</button>
-            <button type="button" onclick="myFunction(Ignore)">Ignore</button>
+            <button type="button" onclick="myFunction(1)">Say Hello!</button>
+            <button type="button" onclick="myFunction(2)">Hug</button>
+            <button type="button" onclick="myFunction(3)">Ignore</button>
             </div>
         </div>
         <footer>
