--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Silly Insult Generator</title>
+    <title>Girlfriend Tamagotchi</title>
     <link rel="stylesheet" href="style.css">
 
 
@@ -12,7 +12,7 @@
 <body>
     <div class="wrapper">
             <header class="header">
-            <h1>Girlfriend Simulator</h1>
+            <h1>Girlfriend Tamagotchi</h1>
         </header>
             
         <div class="content">
@@ -23,9 +23,9 @@
                 <p id="thoughts">Your girlfriends thoughts will appear here</p>
             </div>
             <div class="buttons">
-            <button type="button" onclick="myFunction(1)">Say Hello!</button>
-            <button type="button" onclick="myFunction(2)">Hug</button>
-            <button type="button" onclick="myFunction(3)">Ignore</button>
+            <button type="button" onclick="button(1)">Say Hello!</button>
+            <button type="button" onclick="button(2)">Hug</button>
+            <button type="button" onclick="button(3)">Ignore</button>
             </div>
         </div>
         <footer>
